# planhat-mcp

./: .env.example  .gitignore  .mcpbignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  manifest.json  package-lock.json  package.json  planhat_mcp.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: env.ts  http.ts  index.ts  server.ts  tools.ts
tests/: conftest.py  http.test.ts  test_bundle.py  test_tools.py  tools.test.ts
